# OnlineSearch

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Interface/: CMakeLists.txt
Interface/include/base/: Proxy.hpp  Struct.hpp  Thread.hpp  Type.hpp
Interface/include/interface/: OnlineSearchClient.hpp  OnlineSearchClientProxy.hpp  OnlineSearchServerProxy.hpp
Interface/include/request/: Requester.hpp
Interface/include/types/: ConnectionInfo.hpp  SearchId.hpp  SearchResult.hpp  SearchStatus.hpp
Interface/src/request/: Requester.cpp
client_cpp/: CMakeLists.txt
client_cpp/src/: main.cpp
include/common/: Type.hpp
include/common/util/: Tuple.hpp
include/mariadb/: ma_config.h  mariadb_version.h
include/thrift/cpp/thrift/: config.h
interface/include/request/: MySql.hpp
interface/include/utils/: Tuple.hpp
libs/: libmariadb.exp  libmariadb.lib  thriftmd.lib  thriftmdd.lib
scripts/: ConvertData.py
server/: CMakeLists.txt
server/include/: OnlineSearchServer.hpp
server/include/requester/: MySql.hpp  Requester.hpp
server/src/: main.cpp
server/src/request/: Requester.cpp
server/src/requester/: Requester.cpp
thrift/: OnlineSearch.thrift  Types.thrift
thrift/gen-cpp/: OnlineSearch.cpp  OnlineSearch.h  OnlineSearchProxy.cpp  OnlineSearchProxy.h  OnlineSearch_types.cpp  OnlineSearch_types.h
